# soquette-rs

./: Cargo.toml  LICENSE  README.md
examples/basic/: project.yaml
examples/basic/src/: main.sq
src/: functions.rs  main.rs  node.rs  parser.rs  test.txt  value.rs
