[package]
name = "soquette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
serde = { version = "1.0.185", features = ["serde_derive"] }
serde_yaml = "0.9.25"
uuid = { version = "1.4.1", features = ["v4"] }
